--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "esp32-c6-rgbled"
+name = "esp32c6-rgbled"
 version = "0.1.0"
 authors = ["LuMarans30 <andreamarano2004@gmail.com>"]
 edition = "2021"
@@ -7,7 +7,7 @@ resolver = "2"
 rust-version = "1.77"
 
 [[bin]]
-name = "esp32-c6-rgbled"
+name = "esp32c6-rgbled"
 harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors
 
 [profile.release]
